Fix GPU Ring Buffer alignment crash

Fixes an issue in gpu::RingBuffer where requesting an Alloc with the
value returned by RingBuffer::GetLargestFreeOrPendingSize would result
in trying to allocate more memory than the maximum buffer size if the
ring buffer's size was not aligned.

Bug: 834444
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: I672f67944a1ae4c5e34fe5b6d9f209f4a9112400
Reviewed-on: https://chromium-review.googlesource.com/1018525
Commit-Queue: Brian Sheedy <bsheedy@chromium.org>
Reviewed-by: Brandon Jones <bajones@chromium.org>
Reviewed-by: Bill Orr <billorr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#552118}
Former-commit-id: 0b3868aa32759ac4dc1a6dba3794dfeb33c7ebbd